--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ dev = ["clippy"]
 [dependencies]
 arrayvec = "0.3"
 clippy = { version = "0.0", optional = true }
-rand = "0.3"
+rand = { version = "0.3", optional = true}
 libc = "0.2"
 rustc-serialize = "0.3"
 lazy_static = { version = "0.2", optional = true }
